# Legal-AI-Rag

./: .gitignore  app.py  embeddings.py  llm.py  main.py  parser.py  pyproject.toml  retrieval.py  utils.py
legal_ai/: __init__.py  clause_detector.py  risk_classifier.py
templates/: index.html
