[project]
name = "legal-ai-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.5",
    "pdfplumber>=0.11.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "openai>=1.12.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.7.3",
    "rank-bm25>=0.2.2",
    "google-generativeai>=0.4.0",
]
